[metadata]
name = RiskMatrix
version = attr: riskmatrix.__version__
description = RiskMatrix
long_description = file: README.md
author = Seantis GmbH
author_email = info@seantis.ch
url = https://github.com/seantis/riskmatrix
keywords = web pyramid pylons
classifiers =
    Programming Language :: Python
    Framework :: Pyramid
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
include_package_data = True
zip_safe = False
packages =
    riskmatrix
package_dir =
    = src
python_requires = >=3.10
install_requires =
    alembic
    Babel
    bcrypt
    cryptography
    email_validator
    fanstatic
    markupsafe
    Pillow
    plaster
    plaster_pastedeploy
    pyramid
    pyramid_beaker
    pyramid_chameleon
    pyramid_layout
    pyramid_retry
    pyramid_tm
    python-magic
    pytz
    sedate
    sentry_sdk
    SQLAlchemy
    transaction
    WebOb
    waitress
    WTForms
    zope.deprecation
    zope.event
    zope.interface
    zope.schema
    zope.sqlalchemy

[options.package_data]
riskmatrix =
    py.typed

[options.entry_points]
paste.app_factory =
    main = riskmatrix:main

fanstatic.libraries =
      riskmatrix:js = riskmatrix.static:js_library
      riskmatrix:css = riskmatrix.static:css_library

console_scripts =
    add_user = riskmatrix.scripts.add_user:main
    upgrade = riskmatrix.scripts.upgrade:main
    import-seantis-excel = riskmatrix.scripts.seantis_import_risk_excel:main

[flake8]
extend-select = B901,B903,B904,B908,TC2
per_file_ignores =
    *.pyi: B,C,MS,TC,E301,E302,E305,E501,E701,F401,F403,F405,F822
    tests/**.py: C,MS,NQA104,TC
noqa-require-code = true
type-checking-sqlalchemy-enabled = true
